@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tcl installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.60 2002/12/13 17:46:01 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.61 2003/01/13 01:27:51 mdejong Exp $
 
 AC_INIT(../generic/tcl.h)
 AC_PREREQ(2.13)
@@ -144,6 +144,29 @@ AC_TRY_COMPILE([
 if test "$tcl_cv_eh_disposition" = "no" ; then
     AC_DEFINE(EXCEPTION_DISPOSITION, int,
             [Defined when cygwin/mingw does not support EXCEPTION DISPOSITION])
+fi
+
+
+# Check to see if the winsock2.h include file provided contains
+# typedefs like LPFN_ACCEPT and friends.
+#
+AC_CACHE_CHECK(for LPFN_ACCEPT support in winsock2.h,
+    tcl_cv_lpfn_decls,
+AC_TRY_COMPILE([
+#define WIN32_LEAN_AND_MEAN
+#include <windows.h>
+#undef WIN32_LEAN_AND_MEAN
+#include <winsock2.h>
+],
+[
+  LPFN_ACCEPT accept;
+],
+        tcl_cv_lpfn_decls=yes,
+        tcl_cv_lpfn_decls=no)
+)
+if test "$tcl_cv_lpfn_decls" = "no" ; then
+    AC_DEFINE(HAVE_NO_LPFN_DECLS, 1,
+            [Defined when cygwin/mingw does not support LPFN_ACCEPT and friends.])
 fi
 
 #--------------------------------------------------------------------
